--- a/packages/core/bots/package.json
+++ b/packages/core/bots/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@botmate/bots",
   "version": "0.0.1-prerelease.24",
+  "files": [
+    "lib"
+  ],
   "description": "",
   "main": "lib/index.js",
   "scripts": {
