--- a/packages/core/scripts/package.json
+++ b/packages/core/scripts/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@botmate/scripts",
   "version": "0.0.1-prerelease.24",
+  "files": [
+    "lib"
+  ],
   "botmate": {
     "displayName": "Scripts APIs",
     "name": "scripts",
