--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@botmate/plugin.discord",
   "version": "0.0.1-prerelease.24",
+  "files": [
+    "lib"
+  ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
