--- a/packages/shared/logger/tsconfig.json
+++ b/packages/shared/logger/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "lib"
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/**"]
