--- a/packages/shared/typescript/package.json
+++ b/packages/shared/typescript/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "@botmate/typescript-utils",
-	"version": "0.0.1-prerelease.24",
-	"description": "Typescript support for BotMate",
-	"keywords": [],
-	"author": "xencodes",
-	"main": "./lib/index.js",
-	"directories": {
-		"lib": "./lib"
-	},
-	"dependencies": {
-		"chalk": "4.1.2",
-		"cli-table3": "0.6.2",
-		"fs-extra": "10.0.1",
-		"lodash": "4.17.21",
-		"prettier": "2.8.4",
-		"typescript": "4.6.2"
-	}
+  "name": "@botmate/typescript-utils",
+  "version": "0.0.1-prerelease.24",
+  "files": [
+    "lib"
+  ],
+  "description": "Typescript support for BotMate",
+  "keywords": [],
+  "author": "xencodes",
+  "main": "./lib/index.js",
+  "dependencies": {
+    "chalk": "4.1.2",
+    "cli-table3": "0.6.2",
+    "fs-extra": "10.0.1",
+    "lodash": "4.17.21",
+    "prettier": "2.8.4",
+    "typescript": "4.6.2"
+  }
 }
