--- a/packages/shared/ui/package.json
+++ b/packages/shared/ui/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@botmate/ui",
   "version": "0.0.1-prerelease.24",
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
