--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/admin",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
     "lib",
     "admin"
@@ -58,16 +58,16 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
     "typescript": "4.9.5",
-    "vite-plugin-environment": "^1.1.3"
-  },
-  "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.42",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/loadable__component": "^5.13.4",
+    "vite-plugin-environment": "^1.1.3",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/loadable__component": "^5.13.4"
   }
 }
