--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/core",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "files": [
     "lib"
   ],
@@ -35,10 +35,10 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "resolve-cwd": "^3.0.0",
-    "yup": "0.32.9"
+    "yup": "0.32.9",
+    "@botmate/logger": "workspace:*"
   },
   "devDependencies": {
-    "@botmate/logger": "workspace:*",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.42",
     "@types/cors": "^2.8.13",
