--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@botmate/plugin.discord",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
-    "lib"
+    "lib",
+    "admin"
   ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
