--- a/packages/core/helper-plugin/package.json
+++ b/packages/core/helper-plugin/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@botmate/helper-plugin",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "files": [
     "lib"
   ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "dist/index.mjs",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "module": "lib/index.mjs",
   "scripts": {
     "build": "tsup"
   },
