fix: include botmate-server.js file

--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@botmate/admin",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "files": [
     "lib",
-    "admin"
+    "admin",
+    "botmate-server.js"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
