--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@botmate/admin",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "files": [
     "lib",
     "admin",
@@ -26,16 +26,21 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@loadable/component": "^5.15.3",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.42",
     "@types/chokidar": "^2.1.3",
     "@types/fs-extra": "^11.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "apexcharts": "^3.37.2",
     "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
     "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
@@ -59,15 +64,12 @@
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.9.0",
     "typescript": "4.9.5",
-    "vite-plugin-environment": "^1.1.3",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "vite": "^4.2.0",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.42"
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/loadable__component": "^5.13.4"
   }
