--- a/packages/core/botmate/package.json
+++ b/packages/core/botmate/package.json
@@ -16,12 +16,11 @@
   "dependencies": {
     "@botmate/admin": "workspace:*",
     "@botmate/bots": "workspace:*",
-    "@botmate/database": "workspace:*",
+    "@botmate/logger": "workspace:*",
     "@botmate/plugin.telegram": "workspace:*",
     "@botmate/scripts": "workspace:*",
     "@botmate/typescript-utils": "workspace:*",
     "@botmate/utils": "workspace:*",
-    "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
     "commander": "^10.0.0",
     "cors": "^2.8.5",
@@ -35,8 +34,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "resolve-cwd": "^3.0.0",
-    "yup": "0.32.9",
-    "@botmate/logger": "workspace:*"
+    "yup": "0.32.9"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
