--- a/packages/core/admin/package.json
+++ b/packages/core/admin/package.json
@@ -4,7 +4,7 @@
   "files": [
     "lib",
     "admin",
-    "botmate-server.js"
+    "entry.js"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
